updated at: 2020-01-21 17:58, VRアバター向け3Dモデル【ウィンドール】 - 三丁目の魔界 - BOOTH

--- a/VRChat/22/966122.html
+++ b/VRChat/22/966122.html
@@ -6,7 +6,7 @@
       VRアバター向け3Dモデル【ウィンドール】 - 三丁目の魔界 - BOOTH
     </title>
     <meta name="description" content=
-    "VRアバター向けオリジナル３Dモデル【ウィンドール】 〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル ・利用規約,導入手順書（日本語、English）">
+    "VRアバター向けオリジナル３Dモデル【ウィンドール】 〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。 ：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/966122">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRアバター向け3Dモデル【ウィンドール】 - 三丁目の魔界 - BOOTH">
     <meta name="twitter:description" content=
-    "VRアバター向けオリジナル３Dモデル【ウィンドール】 〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル ・利用規約,導入手順書（日本語、English）">
+    "VRアバター向けオリジナル３Dモデル【ウィンドール】 〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。 ：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3c39b721-63d9-4193-a883-507b13ff6ebc/i/966122/a8dcfc4d-468d-490c-bcb2-f6f10c41b459_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRアバター向け3Dモデル【ウィンドール】 - 三丁目の魔界 - BOOTH">
     <meta property="og:description" content=
-    "VRアバター向けオリジナル３Dモデル【ウィンドール】 〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル ・利用規約,導入手順書（日本語、English）">
+    "VRアバター向けオリジナル３Dモデル【ウィンドール】 〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。 ：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3c39b721-63d9-4193-a883-507b13ff6ebc/i/966122/a8dcfc4d-468d-490c-bcb2-f6f10c41b459_base_resized.jpg">
     <meta property="og:url" content=
@@ -300,6 +300,7 @@
                           <p class="autolink u-text-wrap">
                             VRアバター向けオリジナル３Dモデル【ウィンドール】
                             〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。
+                            ：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。
                             UnityのHumanoid形式対応のオリジナル３Dモデルです。
                             VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！
                             セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！
