updated at: 2020-01-21 18:34, 扇子(Folding fan) - DeR雑貨屋 - BOOTH

--- a/VRChat/46/958846.html
+++ b/VRChat/46/958846.html
@@ -6,7 +6,7 @@
       扇子(Folding fan) - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "扇子のモデルです（ユニティパッケージ）。 650ポリゴン。 オマケ程度に、開閉動作のシェイプキー入り。 幾つかテクスチャを入れていますが、改変改造、ご自由にお使いください。 VRChat想定ですが、その他にもお使いいただけます。 ただし、再配布は禁止とさせていただきます。 【使い方】 基本は柄のない無地テクスチャです。 マテリアルは「扇子テクスチャ_無地」「扇子テクスチャ_骨組み」で分かれています。 お好きなテクスチャを「扇子テクスチャ_無地」に適用してください。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vr 【アップデート】">
+    "扇子のモデルです（ユニティパッケージ）。 650ポリゴン。 オマケ程度に、開閉動作のシェイプキー入り。 幾つかテクスチャを入れていますが、改変改造、ご自由にお使いください。 VRChat想定ですが、その他にもお使いいただけます。 ただし、再配布は禁止とさせていただきます。 【使い方】 基本は柄のない無地テクスチャです。 マテリアルは「扇子テクスチャ_無地」「扇子テクスチャ_骨組み」で分かれています。 お好きなテクスチャを「扇子テクスチャ_無地」に適用してください。 改善点、ご要望はメッセージにて 【アップデート】 2018/8/28 陰影表現用のPSDファイルを追加しました。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/958846">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "扇子(Folding fan) - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "扇子のモデルです（ユニティパッケージ）。 650ポリゴン。 オマケ程度に、開閉動作のシェイプキー入り。 幾つかテクスチャを入れていますが、改変改造、ご自由にお使いください。 VRChat想定ですが、その他にもお使いいただけます。 ただし、再配布は禁止とさせていただきます。 【使い方】 基本は柄のない無地テクスチャです。 マテリアルは「扇子テクスチャ_無地」「扇子テクスチャ_骨組み」で分かれています。 お好きなテクスチャを「扇子テクスチャ_無地」に適用してください。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vr 【アップデート】">
+    "扇子のモデルです（ユニティパッケージ）。 650ポリゴン。 オマケ程度に、開閉動作のシェイプキー入り。 幾つかテクスチャを入れていますが、改変改造、ご自由にお使いください。 VRChat想定ですが、その他にもお使いいただけます。 ただし、再配布は禁止とさせていただきます。 【使い方】 基本は柄のない無地テクスチャです。 マテリアルは「扇子テクスチャ_無地」「扇子テクスチャ_骨組み」で分かれています。 お好きなテクスチャを「扇子テクスチャ_無地」に適用してください。 改善点、ご要望はメッセージにて 【アップデート】 2018/8/28 陰影表現用のPSDファイルを追加しました。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/958846/aaeb6713-0043-4658-9feb-d99f78dc9474_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "扇子(Folding fan) - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "扇子のモデルです（ユニティパッケージ）。 650ポリゴン。 オマケ程度に、開閉動作のシェイプキー入り。 幾つかテクスチャを入れていますが、改変改造、ご自由にお使いください。 VRChat想定ですが、その他にもお使いいただけます。 ただし、再配布は禁止とさせていただきます。 【使い方】 基本は柄のない無地テクスチャです。 マテリアルは「扇子テクスチャ_無地」「扇子テクスチャ_骨組み」で分かれています。 お好きなテクスチャを「扇子テクスチャ_無地」に適用してください。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vr 【アップデート】">
+    "扇子のモデルです（ユニティパッケージ）。 650ポリゴン。 オマケ程度に、開閉動作のシェイプキー入り。 幾つかテクスチャを入れていますが、改変改造、ご自由にお使いください。 VRChat想定ですが、その他にもお使いいただけます。 ただし、再配布は禁止とさせていただきます。 【使い方】 基本は柄のない無地テクスチャです。 マテリアルは「扇子テクスチャ_無地」「扇子テクスチャ_骨組み」で分かれています。 お好きなテクスチャを「扇子テクスチャ_無地」に適用してください。 改善点、ご要望はメッセージにて 【アップデート】 2018/8/28 陰影表現用のPSDファイルを追加しました。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/958846/aaeb6713-0043-4658-9feb-d99f78dc9474_base_resized.jpg">
     <meta property="og:url" content=
@@ -468,9 +468,7 @@
                             基本は柄のない無地テクスチャです。
                             マテリアルは「扇子テクスチャ_無地」「扇子テクスチャ_骨組み」で分かれています。
                             お好きなテクスチャを「扇子テクスチャ_無地」に適用してください。
-                            改善点、ご要望はこちらにどうぞ。
-                            https://kansoubako.net/#/topiris_vr
-                            【アップデート】 2018/8/28
+                            改善点、ご要望はメッセージにて 【アップデート】 2018/8/28
                             陰影表現用のPSDファイルを追加しました。
                             画像編集ソフトが必要になりますが、「ハイライト」「シャドウ」の透明度などを、テクスチャの色合いに応じて調整し、PNG保存して適用してください。
                             サンプル画像の最後が適用後のものです。
