--- a/VRChat/43/936643.html
+++ b/VRChat/43/936643.html
@@ -6,7 +6,7 @@
       VRアバター向け3Dモデル【フェオドール】 - 三丁目の魔界 - BOOTH
     </title>
     <meta name="description" content=
-    "VRアバター向けオリジナル３Dモデル【フェオドール】 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 専用モーションが入っており、定期的に翼が動きます！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル ・利用規約,導入手順書（日本語、English） 〇禁止事項 ・データの再配布">
+    "VRアバター向けオリジナル３Dモデル【フェオドール】 注意：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 専用モーションが入っており、定期的に翼が動きます！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/936643">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRアバター向け3Dモデル【フェオドール】 - 三丁目の魔界 - BOOTH">
     <meta name="twitter:description" content=
-    "VRアバター向けオリジナル３Dモデル【フェオドール】 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 専用モーションが入っており、定期的に翼が動きます！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル ・利用規約,導入手順書（日本語、English） 〇禁止事項 ・データの再配布">
+    "VRアバター向けオリジナル３Dモデル【フェオドール】 注意：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 専用モーションが入っており、定期的に翼が動きます！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3c39b721-63d9-4193-a883-507b13ff6ebc/i/936643/635ab2cc-4e90-41e6-aaec-c4f2197e7aef_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRアバター向け3Dモデル【フェオドール】 - 三丁目の魔界 - BOOTH">
     <meta property="og:description" content=
-    "VRアバター向けオリジナル３Dモデル【フェオドール】 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 専用モーションが入っており、定期的に翼が動きます！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル ・利用規約,導入手順書（日本語、English） 〇禁止事項 ・データの再配布">
+    "VRアバター向けオリジナル３Dモデル【フェオドール】 注意：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。 UnityのHumanoid形式対応のオリジナル３Dモデルです。 VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！ セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！ 専用モーションが入っており、定期的に翼が動きます！ 商用利用及び、改変しての利用が可能です。 〇データ内容 ・モデルデータ（fbx） ・テクスチャデータ（png,psd） ・アニメーションファイル ・Unityパッケージファイル">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3c39b721-63d9-4193-a883-507b13ff6ebc/i/936643/635ab2cc-4e90-41e6-aaec-c4f2197e7aef_base_resized.jpg">
     <meta property="og:url" content=
@@ -299,6 +299,7 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             VRアバター向けオリジナル３Dモデル【フェオドール】
+                            注意：旧バージョンで作成されたモデルです。正常に動作しない可能性があります。
                             UnityのHumanoid形式対応のオリジナル３Dモデルです。
                             VRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！
                             セットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！
