updated at: 2020-01-22 01:02, 【3Dモデル】エレキギター - DeR雑貨屋 - BOOTH

--- a/VRChat/91/1171791.html
+++ b/VRChat/91/1171791.html
@@ -6,7 +6,7 @@
       【3Dモデル】エレキギター - DeR雑貨屋 - BOOTH
     </title>
     <meta name="description" content=
-    "イラスト用に作ったエレキギターモデルです。 画像３枚目はクリスタによるベタLT変換見本です。 ポリゴン数9239 イラスト用ですが、作り方は同じなのでVRCでも使えるかと。 どのようなプラットフォームでも利用、改変可。 再配布禁止。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vrc">
+    "イラスト用に作ったエレキギターモデルです。 画像３枚目はクリスタによるベタLT変換見本です。 ポリゴン数9239 イラスト用ですが、作り方は同じなのでVRCでも使えるかと。 どのようなプラットフォームでも利用、改変可。 再配布禁止。 改善点、ご要望はメッセージにて">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1171791">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【3Dモデル】エレキギター - DeR雑貨屋 - BOOTH">
     <meta name="twitter:description" content=
-    "イラスト用に作ったエレキギターモデルです。 画像３枚目はクリスタによるベタLT変換見本です。 ポリゴン数9239 イラスト用ですが、作り方は同じなのでVRCでも使えるかと。 どのようなプラットフォームでも利用、改変可。 再配布禁止。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vrc">
+    "イラスト用に作ったエレキギターモデルです。 画像３枚目はクリスタによるベタLT変換見本です。 ポリゴン数9239 イラスト用ですが、作り方は同じなのでVRCでも使えるかと。 どのようなプラットフォームでも利用、改変可。 再配布禁止。 改善点、ご要望はメッセージにて">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1171791/a8874d3f-057e-4213-858a-fe24c2535157_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【3Dモデル】エレキギター - DeR雑貨屋 - BOOTH">
     <meta property="og:description" content=
-    "イラスト用に作ったエレキギターモデルです。 画像３枚目はクリスタによるベタLT変換見本です。 ポリゴン数9239 イラスト用ですが、作り方は同じなのでVRCでも使えるかと。 どのようなプラットフォームでも利用、改変可。 再配布禁止。 改善点、ご要望はこちらにどうぞ。 https://kansoubako.net/#/topiris_vrc">
+    "イラスト用に作ったエレキギターモデルです。 画像３枚目はクリスタによるベタLT変換見本です。 ポリゴン数9239 イラスト用ですが、作り方は同じなのでVRCでも使えるかと。 どのようなプラットフォームでも利用、改変可。 再配布禁止。 改善点、ご要望はメッセージにて">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1171791/a8874d3f-057e-4213-858a-fe24c2535157_base_resized.jpg">
     <meta property="og:url" content=
@@ -314,8 +314,7 @@
                             画像３枚目はクリスタによるベタLT変換見本です。 ポリゴン数9239
                             イラスト用ですが、作り方は同じなのでVRCでも使えるかと。
                             どのようなプラットフォームでも利用、改変可。 再配布禁止。
-                            改善点、ご要望はこちらにどうぞ。
-                            https://kansoubako.net/#/topiris_vrc
+                            改善点、ご要望はメッセージにて
                           </p>
                         </div>
                       </section>
