updated at: 2020-01-22 20:22, Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH

--- a/VRChat/30/1303330.html
+++ b/VRChat/30/1303330.html
@@ -6,7 +6,7 @@
       Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH
     </title>
     <meta name="description" content=
-    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 環境によるかもしれませんが、参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 2019 4/19 V1.12 加速度も反映するようにした。 [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして">
+    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 身長や環境によるかもしれませんが、 参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで 仮想トラッカーを起動するとVR上もOculusTouchになるので 調整しやすいでしょう。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1303330">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH">
     <meta name="twitter:description" content=
-    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 環境によるかもしれませんが、参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 2019 4/19 V1.12 加速度も反映するようにした。 [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして">
+    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 身長や環境によるかもしれませんが、 参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで 仮想トラッカーを起動するとVR上もOculusTouchになるので 調整しやすいでしょう。">
     <meta name="twitter:image" content=
     "https://asset.booth.pm/assets/og_image-f5671bd0a69c6bd18bf956838ee53a25aa27c49270b213859b2f67ba5d3d03c2.png">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH">
     <meta property="og:description" content=
-    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 環境によるかもしれませんが、参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 2019 4/19 V1.12 加速度も反映するようにした。 [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして">
+    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 身長や環境によるかもしれませんが、 参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで 仮想トラッカーを起動するとVR上もOculusTouchになるので 調整しやすいでしょう。">
     <meta property="og:image" content=
     "https://asset.booth.pm/assets/og_image-f5671bd0a69c6bd18bf956838ee53a25aa27c49270b213859b2f67ba5d3d03c2.png">
     <meta property="og:url" content=
@@ -403,13 +403,16 @@
                             ＊STEAMのアップデートで？トラッカーがずれているようです＊
                             HMD中のSteamVRのInputEmulatorのデバイス設定から
                             Device Offsetでチューニングすることで強引に修正できます。
-                            環境によるかもしれませんが、参考までに当方でのざっくり修正値は以下の通りです。
+                            身長や環境によるかもしれませんが、
+                            参考までに当方でのざっくり修正値は以下の通りです。
                             WorldFromDriver Offsets: Y 87.0
                             DriverFromHead Offsets: Pitch 20.0　Y
-                            2.0 2019 4/19 V1.12 加速度も反映するようにした。
-                            [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして
-                            SteamVRで利用するツールです。 主な用途は腰トラッキングとか。
-                            仮想トラッカー単体、及び
+                            2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで
+                            仮想トラッカーを起動するとVR上もOculusTouchになるので
+                            調整しやすいでしょう。 2019 4/19 V1.12
+                            加速度も反映するようにした。 [ツール概要] 3個めのOculus
+                            Touchを仮想のトラッカーとして SteamVRで利用するツールです。
+                            主な用途は腰トラッキングとか。 仮想トラッカー単体、及び
                             仮想トラッカー(腰)＋KinectToVR(両足)の組み合わせで、
                             VRChatとVirtualMotionCaptureでの動作を確認しています。
                             (2019-04/04現在) LIVも併用可。
