updated at: 2020-01-24 17:15, VRChat向けアクセサリー　指輪 - こものべや - BOOTH

--- a/VRChat/73/1032673.html
+++ b/VRChat/73/1032673.html
@@ -78,9 +78,10 @@
     <div class="page-wrap">
       <main role="main">
         <div class="market-item-detail u-bg-white"
-        data-product-brand="wotapacchin" data-product-category="17"
-        data-product-id="1032673" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item">
+        data-product-brand="wotapacchin" data-product-category=
+        "127" data-product-id="1032673" data-product-list=
+        "market_show" data-product-price="0" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -89,16 +90,15 @@
                   data-product-list=
                   "from market_show via breadcrumbs to category_index"
                   href=
-                  "/ja/browse/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA%E3%83%BC">
-                  アクセサリー</a>
+                  "/ja/browse/%E7%B4%A0%E6%9D%90%E3%83%87%E3%83%BC%E3%82%BF">
+                  素材データ</a>
                 </div>
                 <div class="breadcrumb">
                   <a class="label" data-tracking="click"
                   data-product-list=
                   "from market_show via breadcrumbs to category_index"
                   href=
-                  "/ja/browse/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA%E3%83%BC%EF%BC%88%E3%81%9D%E3%81%AE%E4%BB%96%EF%BC%89">
-                  アクセサリー（その他）</a>
+                  "/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB">3Dモデル</a>
                 </div>
               </div>
             </div>
@@ -379,6 +379,17 @@
                             data-tracking="click"
                             data-product-list="from market_show via tag_list to search_index"
                             href=
+                            "https://booth.pm/ja/search/%E6%8C%87%E8%BC%AA">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                指輪
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
                             "https://booth.pm/ja/search/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA%E3%83%BC">
                             <div class="search-guide-tablet-label">
                               <div class=
@@ -430,9 +441,9 @@
                         "click" data-product-list=
                         "from market_show via tag_category_search to search_index"
                         href=
-                        "https://booth.pm/ja/browse/%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA%E3%83%BC%EF%BC%88%E3%81%9D%E3%81%AE%E4%BB%96%EF%BC%89?q=%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B5%E3%83%AA%E3%83%BC">
+                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=%E6%8C%87%E8%BC%AA">
                         <div class="search-label">
-                          アクセサリー x アクセサリー（その他） で検索
+                          指輪 x 3Dモデル で検索
                         </div></a>
                       </div>
                     </div>
