updated at: 2020-01-24 20:53, Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH

--- a/VRChat/30/1303330.html
+++ b/VRChat/30/1303330.html
@@ -6,7 +6,7 @@
       Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH
     </title>
     <meta name="description" content=
-    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 身長や環境によるかもしれませんが、 参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで 仮想トラッカーを起動するとVR上もOculusTouchになるので 調整しやすいでしょう。">
+    "本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1303330">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH">
     <meta name="twitter:description" content=
-    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 身長や環境によるかもしれませんが、 参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで 仮想トラッカーを起動するとVR上もOculusTouchになるので 調整しやすいでしょう。">
+    "本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び">
     <meta name="twitter:image" content=
     "https://asset.booth.pm/assets/og_image-f5671bd0a69c6bd18bf956838ee53a25aa27c49270b213859b2f67ba5d3d03c2.png">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "Oculus Touch 仮想トラッカー化ツール - のっそり猫 - BOOTH">
     <meta property="og:description" content=
-    "＊STEAMのアップデートで？トラッカーがずれているようです＊ HMD中のSteamVRのInputEmulatorのデバイス設定から Device Offsetでチューニングすることで強引に修正できます。 身長や環境によるかもしれませんが、 参考までに当方でのざっくり修正値は以下の通りです。 WorldFromDriver Offsets: Y 87.0 DriverFromHead Offsets: Pitch 20.0　Y 2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで 仮想トラッカーを起動するとVR上もOculusTouchになるので 調整しやすいでしょう。">
+    "本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに SpaceCaliblatorで空間補正した場合、 仮想トラッカーも影響を受けてしまっていた問題が修正されています。 強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。 ※トラッカーが下にでてしまう問題の 　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要] 3個めのOculus Touchを仮想のトラッカーとして SteamVRで利用するツールです。 主な用途は腰トラッキングとか。 仮想トラッカー単体、及び">
     <meta property="og:image" content=
     "https://asset.booth.pm/assets/og_image-f5671bd0a69c6bd18bf956838ee53a25aa27c49270b213859b2f67ba5d3d03c2.png">
     <meta property="og:url" content=
@@ -179,9 +179,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "OculusVirtualTracker112.zip"
+                                    "OculusVirtualTracker120.zip"
                                     href=
-                                    "https://booth.pm/downloadables/554984">
+                                    "https://booth.pm/downloadables/879440">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -190,13 +190,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        OculusVirtualTracker112
+                                        OculusVirtualTracker120
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(70.2 KB)
+                                        &nbsp;(70 KB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -335,9 +335,9 @@
                                     </div></a><a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "OculusVirtualTracker100.zip"
+                                    "OculusVirtualTracker112.zip"
                                     href=
-                                    "https://booth.pm/downloadables/541816">
+                                    "https://booth.pm/downloadables/554984">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -346,13 +346,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        OculusVirtualTracker100
+                                        OculusVirtualTracker112
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(66.9 KB)
+                                        &nbsp;(70.2 KB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -400,19 +400,15 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ＊STEAMのアップデートで？トラッカーがずれているようです＊
-                            HMD中のSteamVRのInputEmulatorのデバイス設定から
-                            Device Offsetでチューニングすることで強引に修正できます。
-                            身長や環境によるかもしれませんが、
-                            参考までに当方でのざっくり修正値は以下の通りです。
-                            WorldFromDriver Offsets: Y 87.0
-                            DriverFromHead Offsets: Pitch 20.0　Y
-                            2.0 SteamVRを起動しなおして、-mrや-mlオプションつきで
-                            仮想トラッカーを起動するとVR上もOculusTouchになるので
-                            調整しやすいでしょう。 2019 4/19 V1.12
-                            加速度も反映するようにした。 [ツール概要] 3個めのOculus
-                            Touchを仮想のトラッカーとして SteamVRで利用するツールです。
-                            主な用途は腰トラッキングとか。 仮想トラッカー単体、及び
+                            本ver1.2では、Oculusと(実際の)HTCトラッカーを 併用するときに
+                            SpaceCaliblatorで空間補正した場合、
+                            仮想トラッカーも影響を受けてしまっていた問題が修正されています。
+                            強引に補正で乗り切っていた場合は再修正するか 旧Verをご利用ください。
+                            ※トラッカーが下にでてしまう問題の
+                            　オフセット補正が不要になった訳ではありません。(別問題) [ツール概要]
+                            3個めのOculus Touchを仮想のトラッカーとして
+                            SteamVRで利用するツールです。 主な用途は腰トラッキングとか。
+                            仮想トラッカー単体、及び
                             仮想トラッカー(腰)＋KinectToVR(両足)の組み合わせで、
                             VRChatとVirtualMotionCaptureでの動作を確認しています。
                             (2019-04/04現在) LIVも併用可。
@@ -436,6 +432,9 @@
                             OculusVirtualTracker(このアプリ)を実行
                             ※2～4は順不同で大丈夫なはず
                             以上で仮想トラッカーがOculus画面上に現れているはずです。
+                            …だったのですが、Steamのアップデートの仕様変更で
+                            主に下方向にズレるという現象が起きています。
+                            対処方法は、[位置補正]の項目を参照。
                             OculusVirtualTrackerがエラーで起動しない場合、
                             以下のランタイムを導入することで解決するかもしれません。
                             https://www.microsoft.com/ja-jp/download/details.aspx?id=53587
@@ -443,18 +442,37 @@
                             仮想トラッカーが止まったまま残ります。
                             アプリによってうまく利用できないときは、
                             SteamVRのトラッカー設定で役割設定したり
-                            逆に無効にしたりしてみるといいでしょう。 [起動オプション] -h
-                            オプションの表示 -mt トラッカーモデルを [汎用トラッカー]
-                            に設定(デフォルト) -mv トラッカーモデルを [VIVEコントローラー]
-                            に設定 -ml トラッカーモデルを [Oculus Touch(左手)]
-                            に設定 -mr トラッカーモデルを [Oculus Touch(右手)]
-                            に設定
+                            逆に無効にしたりしてみるといいでしょう。 [位置補正]
+                            トラッカーの位置を補正するには SteamVRのダッシュボードにある
+                            OpenVR InputEmulatorを開いて、Deviceで「VR
+                            Object(Tracker)」を選択、
+                            DeviceOffsetsを開いて、位置を補正後に左上の←で戻り、
+                            NewProfileで名前をつけて保存すれば、
+                            SteamVR起動ごとにDevice選択→Profileを選んでApplyで位置補正がされます。
+                            補正値は環境によりますが、当方では以下でだいたいあっていますので参考に
+                            調整てみたください。 WorldFromDriver Offsetの
+                            Y:85.0 DriverFromHeadOffsetsの Pitch
+                            20.0度 調整する際は、SteamVR起動直後にオプション -ml か
+                            -mrで仮想トラッカーを
+                            起動すると表示モデルがTouchになるので活用してみてください。
+                            [起動オプション] -h オプションの表示 -mt トラッカーモデルを
+                            [汎用トラッカー] に設定(デフォルト) -mv トラッカーモデルを
+                            [VIVEコントローラー] に設定 -ml トラッカーモデルを [Oculus
+                            Touch(左手)] に設定 -mr トラッカーモデルを [Oculus
+                            Touch(右手)] に設定
                             トラッカーモデルとはHMD上のトラッカー位置に表示される3Dモデルです。
                             （変更時は先にSteamVRの再起動が必要） [仕様上の制限]
                             コントローラーと違い、仮想トラッカーは
                             トラッキングを失うと姿勢(角度)情報も更新されなくなります。
                             これはOculusSDKの問題で、改善の要望を出してはいますが
-                            現在のところは仕様です。 [更新履歴] 2019 4/19 V1.12
+                            現在のところは仕様です。 [更新履歴] 2020 1/23 V1.2
+                            HTCトラッカーを併用する場合など、SpaceCalibratorで
+                            LightHouse空間の補正した場合、HTCトラッカーに
+                            偽装していた関係で仮想トラッカーも影響を受けていたので、
+                            Oculus空間の所属に変更した。
+                            空間そのものの向きはOpenVR-IEではオフセット修正
+                            できないのですが、強引に乗り切っていた場合は
+                            再修正が必要になりますのでご注意ください。 2019 4/19 V1.12
                             加速度も反映するようにした。 2019 4/14 V1.11
                             センサーから外れたとき、SDKの仕様で初期姿勢(角度)に
                             戻されるのを、直前の姿勢を維持するよう補正変更。
@@ -467,6 +485,7 @@
                             事前に動作を確認してみてください。 動かなかったら心苦しいので。
                             再配布は禁止します。 Do not redistribute.
                             このページへ誘導してあげてください。
+                            https://nossori.booth.pm/items/1303330
                           </p>
                         </div>
                       </section>
