updated at: 2020-01-24 23:23, 【オリジナル3Dモデル】asha-エシヤ 2.0 - 仮想VoidCat - BOOTH

--- a/VRChat/60/1240960.html
+++ b/VRChat/60/1240960.html
@@ -163,7 +163,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      通常商品
+                                      01/30まで15%割引します
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -172,7 +172,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 3,500
+                                    ¥ 2,975
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -185,7 +185,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1240960"
-                                      data-product-price="3500"
+                                      data-product-price="2975"
                                       data-product-brand="yueou"
                                       data-product-category="127"
                                       data-product-variant=
@@ -201,7 +201,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1240960"
-                                        data-product-price="3500"
+                                        data-product-price="2975"
                                         data-product-brand="yueou"
                                         data-product-category="127"
                                         data-product-variant=
