--- a/VRChat/54/1078754.html
+++ b/VRChat/54/1078754.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【無料】ちびクロムちゃん【ボクセル】 - 黒猫月 - BOOTH
+      オリジナルボクセルモデル『ちびクロムちゃん』 - 黒猫月 - BOOTH
     </title>
     <meta name="description" content=
     "VRChatでの使用を想定して作ったボクセルオリジナルモデルです。 voxファイルのみです。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【無料】ちびクロムちゃん【ボクセル】 - 黒猫月 - BOOTH">
+    "オリジナルボクセルモデル『ちびクロムちゃん』 - 黒猫月 - BOOTH">
     <meta name="twitter:description" content=
     "VRChatでの使用を想定して作ったボクセルオリジナルモデルです。 voxファイルのみです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/395be418-27fb-4339-a2d7-3309b5b175c0/i/1078754/29e30f93-b13a-4f39-8d8b-c6c7675602d2_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【無料】ちびクロムちゃん【ボクセル】 - 黒猫月 - BOOTH">
+    "オリジナルボクセルモデル『ちびクロムちゃん』 - 黒猫月 - BOOTH">
     <meta property="og:description" content=
     "VRChatでの使用を想定して作ったボクセルオリジナルモデルです。 voxファイルのみです。">
     <meta property="og:image" content=
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【無料】ちびクロムちゃん【ボクセル】
+                          オリジナルボクセルモデル『ちびクロムちゃん』
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -275,7 +275,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1078754"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="【無料】ちびクロムちゃん【ボクセル】 | 黒猫月"
+                          data-text="オリジナルボクセルモデル『ちびクロムちゃん』 | 黒猫月"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -294,16 +294,17 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【無料】ちびクロムちゃん【ボクセル】" class=
-                            "market-item-detail-item-image" src=
+                            <img alt="オリジナルボクセルモデル『ちびクロムちゃん』"
+                            class="market-item-detail-item-image"
+                            src=
                             "https://booth.pximg.net/395be418-27fb-4339-a2d7-3309b5b175c0/i/1078754/29e30f93-b13a-4f39-8d8b-c6c7675602d2_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【無料】ちびクロムちゃん【ボクセル】" class=
-                            "market-item-detail-item-image"
+                            <img alt="オリジナルボクセルモデル『ちびクロムちゃん』"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/395be418-27fb-4339-a2d7-3309b5b175c0/i/1078754/f67c5921-65de-4cf2-a9a7-023725e04b35_base_resized.jpg">
                           </div>
