updated at: 2020-01-25 19:18, もっちもち！ジャンガリアンハムスター大福 v02 - しすたーず！-Sisters!- - BOOTH

--- a/VRChat/47/964947.html
+++ b/VRChat/47/964947.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      もっちもち！ジャンガリアンハムスター大福 v02 - しすたーず！ - BOOTH
+      もっちもち！ジャンガリアンハムスター大福 v02 - しすたーず！-Sisters!- - BOOTH
     </title>
     <meta name="description" content=
     "＊モデル説明＊ もっちもちのハムスターモデルをつくりました！ VRChatに遊びに行く際に是非連れて行ってあげてください。 アバターの頭に乗せたり、肩に乗せたり、手に乗せてあげたり... ワールドの小物として使っていただいても構いません。 なるべくローポリ、そしてテクスチャでもふもふ感を表現してみました。 ＊内容物＊ mochiham_v02.fbx ハムスターのモデルが入っています。 all.png ハムスターのテクスチャです。 ＊利用規約＊ 本モデルを購入した時点で本利用規約に同意したものとします。利用規約の内容は変更する場合があり、最新のものが適用されます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "もっちもち！ジャンガリアンハムスター大福 v02 - しすたーず！ - BOOTH">
+    "もっちもち！ジャンガリアンハムスター大福 v02 - しすたーず！-Sisters!- - BOOTH">
     <meta name="twitter:description" content=
     "＊モデル説明＊ もっちもちのハムスターモデルをつくりました！ VRChatに遊びに行く際に是非連れて行ってあげてください。 アバターの頭に乗せたり、肩に乗せたり、手に乗せてあげたり... ワールドの小物として使っていただいても構いません。 なるべくローポリ、そしてテクスチャでもふもふ感を表現してみました。 ＊内容物＊ mochiham_v02.fbx ハムスターのモデルが入っています。 all.png ハムスターのテクスチャです。 ＊利用規約＊ 本モデルを購入した時点で本利用規約に同意したものとします。利用規約の内容は変更する場合があり、最新のものが適用されます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ef40f496-b7db-4dc9-9e06-1127a645a568/i/964947/8bbceb2e-9fee-4803-afbe-cdea86056581_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "もっちもち！ジャンガリアンハムスター大福 v02 - しすたーず！ - BOOTH">
+    "もっちもち！ジャンガリアンハムスター大福 v02 - しすたーず！-Sisters!- - BOOTH">
     <meta property="og:description" content=
     "＊モデル説明＊ もっちもちのハムスターモデルをつくりました！ VRChatに遊びに行く際に是非連れて行ってあげてください。 アバターの頭に乗せたり、肩に乗せたり、手に乗せてあげたり... ワールドの小物として使っていただいても構いません。 なるべくローポリ、そしてテクスチャでもふもふ感を表現してみました。 ＊内容物＊ mochiham_v02.fbx ハムスターのモデルが入っています。 all.png ハムスターのテクスチャです。 ＊利用規約＊ 本モデルを購入した時点で本利用規約に同意したものとします。利用規約の内容は変更する場合があり、最新のものが適用されます。">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://sisters.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="しすたーず！" class=
+                            <img alt="しすたーず！-Sisters!-" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/5db672da-5ecf-4d21-9ba8-13eff80a1cd4_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/de9db5c4-1b9c-477c-8d0b-052956e573fc_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              しすたーず！
+                              しすたーず！-Sisters!-
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/964947"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "もっちもち！ジャンガリアンハムスター大福 v02 | しすたーず！"
+                          "もっちもち！ジャンガリアンハムスター大福 v02 | しすたーず！-Sisters!-"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
