--- a/VRChat/05/1267505.html
+++ b/VRChat/05/1267505.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【無料】パルミュールちゃん【ボクセル】 - 黒猫月 - BOOTH
+      オリジナルボクセルモデル『パルミュール』 - 黒猫月 - BOOTH
     </title>
     <meta name="description" content=
     "VRChatでの使用を想定して作ったボクセルオリジナルモデルです。 voxファイルのみです。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【無料】パルミュールちゃん【ボクセル】 - 黒猫月 - BOOTH">
+    "オリジナルボクセルモデル『パルミュール』 - 黒猫月 - BOOTH">
     <meta name="twitter:description" content=
     "VRChatでの使用を想定して作ったボクセルオリジナルモデルです。 voxファイルのみです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/395be418-27fb-4339-a2d7-3309b5b175c0/i/1267505/6a08982c-b990-4b1c-939a-9bc15817e989_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【無料】パルミュールちゃん【ボクセル】 - 黒猫月 - BOOTH">
+    "オリジナルボクセルモデル『パルミュール』 - 黒猫月 - BOOTH">
     <meta property="og:description" content=
     "VRChatでの使用を想定して作ったボクセルオリジナルモデルです。 voxファイルのみです。">
     <meta property="og:image" content=
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【無料】パルミュールちゃん【ボクセル】
+                          オリジナルボクセルモデル『パルミュール』
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -275,7 +275,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1267505"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="【無料】パルミュールちゃん【ボクセル】 | 黒猫月"
+                          data-text="オリジナルボクセルモデル『パルミュール』 | 黒猫月"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -294,7 +294,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【無料】パルミュールちゃん【ボクセル】" class=
+                            <img alt="オリジナルボクセルモデル『パルミュール』" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/395be418-27fb-4339-a2d7-3309b5b175c0/i/1267505/6a08982c-b990-4b1c-939a-9bc15817e989_base_resized.jpg">
                           </div>
@@ -302,7 +302,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【無料】パルミュールちゃん【ボクセル】" class=
+                            <img alt="オリジナルボクセルモデル『パルミュール』" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/395be418-27fb-4339-a2d7-3309b5b175c0/i/1267505/761d71e5-8ebe-401f-ae7e-6ae5e5fc27ed_base_resized.jpg">
@@ -311,7 +311,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【無料】パルミュールちゃん【ボクセル】" class=
+                            <img alt="オリジナルボクセルモデル『パルミュール』" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/395be418-27fb-4339-a2d7-3309b5b175c0/i/1267505/dc27bbdc-cc8f-49fd-80d0-c6978235d0f7_base_resized.jpg">
