--- a/VRChat/58/1254258.html
+++ b/VRChat/58/1254258.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      [CAMELLIA-カミリア-] -jumper skirt- - しすたーず！ - BOOTH
+      [CAMELLIA-カミリア-] -jumper skirt- - しすたーず！-Sisters!- - BOOTH
     </title>
     <meta name="description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 -----------------------------------------------">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[CAMELLIA-カミリア-] -jumper skirt- - しすたーず！ - BOOTH">
+    "[CAMELLIA-カミリア-] -jumper skirt- - しすたーず！-Sisters!- - BOOTH">
     <meta name="twitter:description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 -----------------------------------------------">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ef40f496-b7db-4dc9-9e06-1127a645a568/i/1254258/5053facc-989f-4f96-b653-530223d04487_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[CAMELLIA-カミリア-] -jumper skirt- - しすたーず！ - BOOTH">
+    "[CAMELLIA-カミリア-] -jumper skirt- - しすたーず！-Sisters!- - BOOTH">
     <meta property="og:description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 -----------------------------------------------">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://sisters.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="しすたーず！" class=
+                            <img alt="しすたーず！-Sisters!-" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/5db672da-5ecf-4d21-9ba8-13eff80a1cd4_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/de9db5c4-1b9c-477c-8d0b-052956e573fc_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              しすたーず！
+                              しすたーず！-Sisters!-
                             </div>
                           </div></a>
                         </div>
@@ -303,7 +303,7 @@
                           "https://booth.pm/ja/items/1254258"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "[CAMELLIA-カミリア-] -jumper skirt- | しすたーず！"
+                          "[CAMELLIA-カミリア-] -jumper skirt- | しすたーず！-Sisters!-"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
