--- a/VRChat/67/1193767.html
+++ b/VRChat/67/1193767.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      オリジナル３Dモデル[CAMELLIA-カミリア-] - しすたーず！ - BOOTH
+      オリジナル３Dモデル[CAMELLIA-カミリア-] - しすたーず！-Sisters!- - BOOTH
     </title>
     <meta name="description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 ----------------------------------------------- カッチりとした服を身に纏い、椿の花のように可憐な少女の３Dモデルです。 本モデルはVRchatでの利用を想定したunityのHumanoid形式に対応した3Dモデルデータです。 ※モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オリジナル３Dモデル[CAMELLIA-カミリア-] - しすたーず！ - BOOTH">
+    "オリジナル３Dモデル[CAMELLIA-カミリア-] - しすたーず！-Sisters!- - BOOTH">
     <meta name="twitter:description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 ----------------------------------------------- カッチりとした服を身に纏い、椿の花のように可憐な少女の３Dモデルです。 本モデルはVRchatでの利用を想定したunityのHumanoid形式に対応した3Dモデルデータです。 ※モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ef40f496-b7db-4dc9-9e06-1127a645a568/i/1193767/009a7f4f-45c1-4442-ac3d-6f213305300e_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オリジナル３Dモデル[CAMELLIA-カミリア-] - しすたーず！ - BOOTH">
+    "オリジナル３Dモデル[CAMELLIA-カミリア-] - しすたーず！-Sisters!- - BOOTH">
     <meta property="og:description" content=
     "こちらのモデルは最新版のVRChatのバージョンに対応して作成、動作確認されていない可能性があります。下記のモデルのアップデート情報をご確認の上、自己責任でご購入お願いします。尚、現在こちらのモデルのアップデート予定はございません。 ----------------------------------------------- カッチりとした服を身に纏い、椿の花のように可憐な少女の３Dモデルです。 本モデルはVRchatでの利用を想定したunityのHumanoid形式に対応した3Dモデルデータです。 ※モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://sisters.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="しすたーず！" class=
+                            <img alt="しすたーず！-Sisters!-" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/5db672da-5ecf-4d21-9ba8-13eff80a1cd4_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/5256354/icon_image/de9db5c4-1b9c-477c-8d0b-052956e573fc_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              しすたーず！
+                              しすたーず！-Sisters!-
                             </div>
                           </div></a>
                         </div>
@@ -302,7 +302,7 @@
                           "https://booth.pm/ja/items/1193767"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "オリジナル３Dモデル[CAMELLIA-カミリア-] | しすたーず！"
+                          "オリジナル３Dモデル[CAMELLIA-カミリア-] | しすたーず！-Sisters!-"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
